--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
             <td mat-cell *matCellDef="let element" [title]="element.DES_CONTO || ''"> {{ element.PROCEDURA }} </td>
         </ng-container>
         <ng-container matColumnDef="stato">
-            <th mat-header-cell *matHeaderCellDef> Segno </th>
+            <th mat-header-cell *matHeaderCellDef> Stato </th>
             <td mat-cell *matCellDef="let element"> {{ element.STATO }} </td>
         </ng-container>
         <ng-container matColumnDef="dataInizio">
