--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
       COUNTERPARTY_MART: P20210503UG 
   </p>
 </div>
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-lg navbar-light" style="position: fixed;width: 100%;top: 0px;z-index: 1;left: 0px;">
   <a class="navbar-brand" href="javascript:void(0);"><img src="../assets/img/logoEstesoRiskPII.jpg"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -66,7 +66,7 @@
     <img src="../assets/img/logoIntesa.gif">
   </div>
 </nav>
-  <div class="content" role="main">
+  <div class="content" role="main" style="margin-top: 90px;">
     <div class="container">
       <alert></alert>
       <router-outlet></router-outlet>
