--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <p style="text-align:center">Procedura in corso: Nessun Processo</p>
 
 <div style="margin-top:20px; margin-bottom: 20px;">
-    <table mat-table [dataSource]="dataSource" style="width:100%;" class="contentTable mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" style="width:100%;margin-bottom:15px" class="contentTable mat-elevation-z8">
         <ng-container matColumnDef="select">
             <th mat-header-cell *matHeaderCellDef>
                 <mat-checkbox (change)="$event ? masterToggle() : null"
@@ -43,12 +43,18 @@
         </ng-container>
         <ng-container matColumnDef="button">
             <th mat-header-cell *matHeaderCellDef class="importi">   </th>
-            <td mat-cell *matCellDef="let row">
-                <button mat-raised-button color="primary" (click)="addStorico(this)">Storico</button>
+            <td mat-cell *matCellDef="let element">
+                <button mat-raised-button color="secondary" style="background-color: #f2c979" (click)="addStorico(element.ID)">Storico</button>
             </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+    <div style="margin:0px auto;display: table;">
+        <button mat-raised-button color="secondary" style="background-color: #f2c979;margin-right: 5px;">Esegui Procedure</button>
+        <button mat-raised-button color="secondary" style="background-color: #f2c979;margin-right: 5px;">Aggiorna Stato</button>
+        <button mat-raised-button color="secondary" style="background-color: #f2c979;margin-right: 5px;">Blocca Procedure</button>
+    </div>
     <!--https://orbit-svil.syssede.systest.sanpaoloimi.com/orbit/webapp/orbit-v1/launchers-->
+
 </div>
