--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,16 @@ html,
 body {
     height: 100%;
 }
+th.mat-header-cell {
+    font-size: 14px;
+    text-align: center !important;
+    font-weight: 400;
+    letter-spacing: .5px;
+    color: #000;
+}
+td.mat-cell{
+    text-align: center;
+}
 
 body {
     margin: 0;
