--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,15 +7,15 @@
         <table mat-table [dataSource]="dataSource" style="width:100%;margin-bottom:15px" class="contentTable mat-elevation-z8">
             <ng-container matColumnDef="select">
                 <th mat-header-cell *matHeaderCellDef>
-                    <mat-checkbox (change)="$event ? masterToggle() : null"
-                                [checked]="selection.hasValue() && isAllSelected()"
-                                [indeterminate]="selection.hasValue() && !isAllSelected()">
+                    <mat-checkbox (change)="$event ? masterToggle(dataSource.data[0].SEZIONE) : null"
+                                [checked]="getSelect(dataSource.data[0].SEZIONE).hasValue() && isAllSelected(dataSource.data[0].SEZIONE)"
+                                [indeterminate]="getSelect(dataSource.data[0].SEZIONE).hasValue() && !isAllSelected(dataSource.data[0].SEZIONE)">
                     </mat-checkbox>
                 </th>
                 <td mat-cell *matCellDef="let row">
                     <mat-checkbox (click)="$event.stopPropagation()"
-                                (change)="$event ? selection.toggle(row) : null"
-                                [checked]="selection.isSelected(row)">
+                                (change)="$event ? getSelect(dataSource.data[0].SEZIONE).toggle(row) : null"
+                                [checked]="getSelect(dataSource.data[0].SEZIONE).isSelected(row)">
                     </mat-checkbox>
                 </td>
             </ng-container>
