--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -54,9 +54,9 @@
         </table>
     </div>
     <div style="margin:0px auto;display: table;">
-        <button mat-raised-button color="secondary" style="background-color: #f2c979;margin-right: 5px;">Esegui Procedure</button>
+        <button mat-raised-button color="secondary" style="background-color: #f2c979;margin-right: 5px;" (click)="eseguiProcedure()">Esegui Procedure</button>
         <button mat-raised-button color="secondary" style="background-color: #f2c979;margin-right: 5px;">Aggiorna Stato</button>
-        <button mat-raised-button color="secondary" style="background-color: #f2c979;margin-right: 5px;">Blocca Procedure</button>
+        <button mat-raised-button color="secondary" style="background-color: #f2c979;margin-right: 5px;" (click)="bloccaProcedure()">Blocca Procedure</button>
     </div>
     <!--https://orbit-svil.syssede.systest.sanpaoloimi.com/orbit/webapp/orbit-v1/launchers-->
 
