--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,25 @@ th.mat-header-cell {
 td.mat-cell{
     text-align: center;
 }
+/* width */
+::-webkit-scrollbar {
+width: 10px;
+}
 
+/* Track */
+::-webkit-scrollbar-track {
+background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+background: #555;
+}
 body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
