--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,8 +30,8 @@
         <a mat-menu-item class="nav-link" style="line-height: 30px;background: #f2c979" routerLink="/nuovo-periodo">Nuovo Periodo</a>
         <a mat-menu-item class="nav-link" style="line-height: 30px;background: #f2c979" routerLink="/nuova-versione">Nuova Versione</a>
         <a mat-menu-item class="nav-link" style="line-height: 30px;background: #f2c979" routerLink="/switch">Switch Periodo/Versione</a>
-        <a mat-menu-item class="nav-link" style="line-height: 30px;background: #f2c979" >Invia a BETWEEN</a> 	 	
-        <a mat-menu-item class="nav-link" style="line-height: 30px;background: #f2c979" >Invia a TdB</a> 	 	
+        <a mat-menu-item class="nav-link" style="line-height: 30px;background: #f2c979" (click)="inviaB2ween()">Invia a BETWEEN</a> 	 	
+        <a mat-menu-item class="nav-link" style="line-height: 30px;background: #f2c979" (click)="inviaTdB()">Invia a TdB</a> 	 	
         <a mat-menu-item class="nav-link" style="line-height: 30px;background: #f2c979" routerLink="/riconciliazione">Riconciliazione</a> 	 	       	 	       	 	    
       </mat-menu>
     </form>
