--- a/src/app/storico-elaborazione/storico-elaborazione.component.html
+++ b/src/app/storico-elaborazione/storico-elaborazione.component.html
@@ -1,1 +1,33 @@
-<p>storico-elaborazione works!</p>
+<h5 style="text-align:center">ELABORAZIONI - Riepilogo Stato Procedure</h5>
+<p style="text-align:center">Procedura in corso: Nessun Processo</p>
+
+<div style="margin-top:20px; margin-bottom: 100px;">
+    <table mat-table [dataSource]="dataSources" style="width:100%;margin-bottom:15px" class="contentTable mat-elevation-z8">
+        <ng-container matColumnDef="stato">
+            <th mat-header-cell *matHeaderCellDef> Stato </th>
+            <td mat-cell *matCellDef="let element"> {{ element.STATO }} </td>
+        </ng-container>
+        <ng-container matColumnDef="dataInizio">
+            <th mat-header-cell *matHeaderCellDef class="importi"> Data Inizio </th>
+            <td mat-cell *matCellDef="let element" class="importi"> {{ element.DATA_INIZIO }} </td>
+        </ng-container>
+        <ng-container matColumnDef="dataFine">
+            <th mat-header-cell *matHeaderCellDef class="importi"> Data Fine </th>
+            <td mat-cell *matCellDef="let element" class="importi"> {{ element.DATA_FINE }} </td>
+        </ng-container>
+        <ng-container matColumnDef="DurMedia">
+            <th mat-header-cell *matHeaderCellDef class="importi"> Durata Media </th>
+            <td mat-cell *matCellDef="let element" class="importi"> {{ element.DUR_MEDIA }} </td>
+        </ng-container>
+        <ng-container matColumnDef="NumSegn">
+            <th mat-header-cell *matHeaderCellDef class="importi"> Num. Segnalazioni </th>
+            <td mat-cell *matCellDef="let element" class="importi"> {{ element.NUM_SEGN }} </td>
+        </ng-container>
+        <ng-container matColumnDef="Utente">
+            <th mat-header-cell *matHeaderCellDef class="utente"> Utente </th>
+            <td mat-cell *matCellDef="let element" class="importi"> {{ element.UTENTE }} </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</div>
