--- a/src/app/storico-elaborazione/storico-elaborazione.component.html
+++ b/src/app/storico-elaborazione/storico-elaborazione.component.html
@@ -1,6 +1,4 @@
-<h5 style="text-align:center">ELABORAZIONI - Riepilogo Stato Procedure</h5>
-<p style="text-align:center">Procedura in corso: Nessun Processo</p>
-
+<h5 style="text-align:center">Storico procedura: <strong style="text-transform: uppercase;">{{ nomeProc }}</strong></h5>
 <div style="margin-top:20px; margin-bottom: 100px;">
     <table mat-table [dataSource]="dataSources" style="width:100%;margin-bottom:15px" class="contentTable mat-elevation-z8">
         <ng-container matColumnDef="stato">
