--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,19 +21,19 @@
             </ng-container>
             <ng-container matColumnDef="procedura">
                 <th mat-header-cell *matHeaderCellDef  style="width: 30%;text-align: left; "> Procedura </th>
-                <td mat-cell *matCellDef="let element" [title]="element.DES_CONTO || ''" style="text-align: left; padding: 0px 15px;"> {{ element.PROCEDURA }} </td>
+                <td mat-cell *matCellDef="let element" [title]="element.DES_CONTO || ''" style="text-align: left; padding: 0px 15px;"> {{ element.TITOLO_PROCEDURA }} </td>
             </ng-container>
             <ng-container matColumnDef="stato">
                 <th mat-header-cell *matHeaderCellDef> Stato </th>
-                <td mat-cell *matCellDef="let element"> {{ element.STATO }} </td>
+                <td mat-cell *matCellDef="let element"> {{ element.ULTIMA_ELAB?.STATO }} </td>
             </ng-container>
             <ng-container matColumnDef="dataInizio">
                 <th mat-header-cell *matHeaderCellDef class="importi"> Data Inizio </th>
-                <td mat-cell *matCellDef="let element" class="importi"> {{ element.DATA_INIZIO }} </td>
+                <td mat-cell *matCellDef="let element" class="importi"> {{ element.ULTIMA_ELAB?.DATA_INIZIO }} </td>
             </ng-container>
             <ng-container matColumnDef="dataFine">
                 <th mat-header-cell *matHeaderCellDef class="importi"> Data Fine </th>
-                <td mat-cell *matCellDef="let element" class="importi"> {{ element.DATA_FINE }} </td>
+                <td mat-cell *matCellDef="let element" class="importi"> {{ element.ULTIMA_ELAB?.DATA_FINE }} </td>
             </ng-container>
             <ng-container matColumnDef="DurMedia">
                 <th mat-header-cell *matHeaderCellDef class="importi"> Durata Media </th>
@@ -42,18 +42,18 @@
             <ng-container matColumnDef="NumSegn">
                 <th mat-header-cell *matHeaderCellDef class="importi"> Num. Segnalazioni </th>
                 <td mat-cell *matCellDef="let element" class="importi"> 
-                    <a *ngIf="element.NUM_SEGN>0" [routerLink]="'/segnalazioni/'+element.ID">{{ element.NUM_SEGN }}</a>
-                    <span *ngIf="!element.NUM_SEGN">{{ element.NUM_SEGN }}</span>
+                    <a *ngIf="element.ULTIMA_ELAB && element.ULTIMA_ELAB.NUM_SEGN>0" [routerLink]="'/segnalazioni/'+element.ULTIMA_ELAB.ID_ELABORAZIONE">{{ element.ULTIMA_ELAB?.NUM_SEGN }}</a>
+                    <span *ngIf="!element.ULTIMA_ELAB || element.ULTIMA_ELAB.NUM_SEGN==0">{{ element.ULTIMA_ELAB?.NUM_SEGN }}</span>
                 </td>
             </ng-container>
             <ng-container matColumnDef="Utente">
                 <th mat-header-cell *matHeaderCellDef class="utente"> Utente </th>
-                <td mat-cell *matCellDef="let element" class="importi"> {{ element.UTENTE }} </td>
+                <td mat-cell *matCellDef="let element" class="importi"> {{ element.ULTIMA_ELAB?.UTENTE }} </td>
             </ng-container>
             <ng-container matColumnDef="button">
                 <th mat-header-cell *matHeaderCellDef class="importi">   </th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-raised-button color="secondary" style="background-color: #efd7a9" (click)="addStorico(element.ID)">Storico</button>
+                    <button mat-raised-button color="secondary" style="background-color: #efd7a9" (click)="addStorico(element.ID_PROCEDURA)">Storico</button>
                 </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
