--- a/src/app/lancio-procedure/lancio-procedure.component.html
+++ b/src/app/lancio-procedure/lancio-procedure.component.html
@@ -3,7 +3,7 @@
 
 <div style="margin-top:20px; margin-bottom: 100px;">
     <div *ngFor="let proc of procedureSelezionate">
-        <h5 style="text-align: center;background-color: #f2c979;margin: 0px;padding: 5px 0px;text-transform: uppercase;">{{proc.PROCEDURA}}</h5>
+        <h5 style="text-align: center;background-color: #f2c979;margin: 0px;padding: 5px 0px;text-transform: uppercase;">{{proc.TITOLO_PROCEDURA}}</h5>
         <div *ngFor="let par of proc.PARAMETRI">
             <div style="width: 20%; font-weight: bold;">{{par.NOME_PARAMETRO}}</div>
             <div style="width: 80%">
