--- a/src/app/storico-elaborazione/storico-elaborazione.component.html
+++ b/src/app/storico-elaborazione/storico-elaborazione.component.html
@@ -13,13 +13,12 @@
             <th mat-header-cell *matHeaderCellDef class="importi"> Data Fine </th>
             <td mat-cell *matCellDef="let element" class="importi"> {{ element.DATA_FINE }} </td>
         </ng-container>
-        <ng-container matColumnDef="DurMedia">
-            <th mat-header-cell *matHeaderCellDef class="importi"> Durata Media </th>
-            <td mat-cell *matCellDef="let element" class="importi"> {{ element.DUR_MEDIA }} </td>
-        </ng-container>
         <ng-container matColumnDef="NumSegn">
             <th mat-header-cell *matHeaderCellDef class="importi"> Num. Segnalazioni </th>
-            <td mat-cell *matCellDef="let element" class="importi"> {{ element.NUM_SEGN }} </td>
+            <td mat-cell *matCellDef="let element" class="importi">
+                <a *ngIf="element.NUM_SEGN>0" [routerLink]="'/segnalazioni/'+element.ID_ELABORAZIONE">{{ element.NUM_SEGN }}</a>
+                <span *ngIf="element.NUM_SEGN==0">{{ element.NUM_SEGN }}</span>
+            </td>
         </ng-container>
         <ng-container matColumnDef="Utente">
             <th mat-header-cell *matHeaderCellDef class="utente"> Utente </th>
