--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/mdp">MdP RADAR <span class="sr-only">(current)</span></a>
+        <a class="nav-link" routerLink="/mdp">MdP RADAR</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/cluster-singoli">Cluster Singoli RADAR</a>
@@ -30,7 +30,7 @@
         <a mat-menu-item class="nav-link" style="line-height: 30px;background: #f2c979" routerLink="/nuovo-periodo">Nuovo Periodo</a>
         <a mat-menu-item class="nav-link" style="line-height: 30px;background: #f2c979" routerLink="/nuova-versione">Nuova Versione</a>
         <a mat-menu-item class="nav-link" style="line-height: 30px;background: #f2c979" routerLink="/switch">Switch Periodo/Versione</a>
-        <a mat-menu-item class="nav-link" style="line-height: 30px;background: #f2c979" (click)="inviaB2ween()">Invia a BETWEEN</a> 	 	
+        <a mat-menu-item class="nav-link" style="line-height: 30px;background: #f2c979" (click)="inviaB2ween()">Invia a B2WEEN</a> 	 	
         <a mat-menu-item class="nav-link" style="line-height: 30px;background: #f2c979" (click)="inviaTdB()">Invia a TdB</a> 	 	
         <a mat-menu-item class="nav-link" style="line-height: 30px;background: #f2c979" routerLink="/riconciliazione">Riconciliazione</a> 	 	       	 	       	 	    
       </mat-menu>
