--- a/src/app/lancio-procedure/lancio-procedure.component.html
+++ b/src/app/lancio-procedure/lancio-procedure.component.html
@@ -29,5 +29,6 @@
 </div>
 
 <div style="margin:0px auto;display: table;">
-    <button mat-raised-button color="secondary" style="background-color: #f2c979;margin-right: 5px;color: rgb(0 98 41); font-weight: 600;" routerLink="/">Lancia</button>
+    <button mat-raised-button color="secondary" style="background-color: #efd7a9;margin-right: 5px;color:rgba(0, 0, 0, 0.87); font-weight: 400;" routerLink="/">Lancia</button>
+    <button mat-raised-button color="secondary" style="background-color: #efd7a9;margin-right: 5px;color: rgba(0, 0, 0, 0.87); font-weight: 400;" routerLink="/">Annulla</button>
 </div>
