--- a/src/app/lancio-procedure/lancio-procedure.component.html
+++ b/src/app/lancio-procedure/lancio-procedure.component.html
@@ -1,33 +1,26 @@
 <h5 style="text-align:center">Lancio procedure</h5>
-
-
 <div style="margin-top:20px; margin-bottom: 100px;">
     <div *ngFor="let proc of procedureSelezionate" style="float:left;width:100%">
         <h5 style="text-align: center;background-color: #f2c979;margin: 0px;padding: 5px 0px;text-transform: uppercase; margin-bottom: 20px;">{{proc.TITOLO_PROCEDURA}}</h5>
         <div *ngFor="let par of proc.PARAMETRI">
-                <mat-form-field *ngIf="par.TIPO=='string'" hintLabel="" appearance="fill" style="float:left;width: calc(25% - 5px);margin-right:5px; ">
-                    <mat-label>{{par.NOME_PARAMETRO}}</mat-label>
-                    <input matInput #input maxlength="10" [(ngModel)]="par.VALORE_PREC" placeholder="Ex. ">
-                    <mat-hint align="end">{{input.value?.length || 0}}/10</mat-hint>
-                </mat-form-field>
-
-                <mat-form-field *ngIf="par.TIPO=='number'" hintLabel="" appearance="fill" style="float:left;width: calc(25% - 5px);margin-right:5px; ">
-                    <mat-label>{{par.NOME_PARAMETRO}}</mat-label>
-                    <input matInput #input type="number" [(ngModel)]="par.VALORE_PREC" placeholder="Ex. ">
-                </mat-form-field>               
-
-                <mat-form-field appearance="fill" *ngIf="par.TIPO=='select'" style="float:left;width: calc(25% - 5px);margin-right:5px; "> 
-                    <mat-label>{{par.NOME_PARAMETRO}}</mat-label>
-                    <mat-select [(ngModel)]="par.VALORE_PREC">
-                      <mat-option *ngFor="let opt of par.OPTIONS" value="opt.VALUE ? opt.VALUE: opt.DESC">{{opt.DESC}}</mat-option>
-                    </mat-select>
-                </mat-form-field>
+            <mat-form-field *ngIf="par.TIPO=='string'" hintLabel="" appearance="fill" style="float:left;width: calc(25% - 5px);margin-right:5px; ">
+                <mat-label>{{par.NOME_PARAMETRO}}</mat-label>
+                <input matInput #input maxlength="10" [(ngModel)]="par.VALORE_PREC" placeholder="Ex. ">
+                <mat-hint align="end">{{input.value?.length || 0}}/10 caratteri</mat-hint>
+            </mat-form-field>
+            <mat-form-field *ngIf="par.TIPO=='number'" hintLabel="" appearance="fill" style="float:left;width: calc(25% - 5px);margin-right:5px; ">
+                <mat-label>{{par.NOME_PARAMETRO}}</mat-label>
+                <input matInput #input type="number" [(ngModel)]="par.VALORE_PREC" placeholder="Ex. ">
+            </mat-form-field>              
+            <mat-form-field appearance="fill" *ngIf="par.TIPO=='select'" style="float:left;width: calc(25% - 5px);margin-right:5px; "> 
+                <mat-label>{{par.NOME_PARAMETRO}}</mat-label>
+                <mat-select [(ngModel)]="par.VALORE_PREC">
+                    <mat-option *ngFor="let opt of par.OPTIONS" value="opt.VALUE ? opt.VALUE: opt.DESC">{{opt.DESC}}</mat-option>
+                </mat-select>
+            </mat-form-field>
         </div>
     </div>
-    <!--https://orbit-svil.syssede.systest.sanpaoloimi.com/orbit/webapp/orbit-v1/launchers-->
-
 </div>
-
 <div style="margin:0px auto;display: table;">
     <button mat-raised-button color="secondary" style="background-color: #efd7a9;margin-right: 5px;color:rgba(0, 0, 0, 0.87); font-weight: 400;" routerLink="/">Lancia</button>
     <button mat-raised-button color="secondary" style="background-color: #efd7a9;margin-right: 5px;color: rgba(0, 0, 0, 0.87); font-weight: 400;" routerLink="/">Annulla</button>
