--- a/src/app/segnalazioni/segnalazioni.component.html
+++ b/src/app/segnalazioni/segnalazioni.component.html
@@ -1,1 +1,15 @@
-<p>segnalazioni works!</p>
+<h5 style="text-align:center">Segnalazioni</h5>
+<div style="margin-top:20px; margin-bottom: 100px;">
+    <table mat-table [dataSource]="dataSource" style="width:100%;margin-bottom:15px" class="contentTable mat-elevation-z8">
+        <ng-container matColumnDef="cod">
+            <th mat-header-cell *matHeaderCellDef> Codice </th>
+            <td mat-cell *matCellDef="let element"> {{ element.COD_ERRORE }} </td>
+        </ng-container>
+        <ng-container matColumnDef="msg">
+            <th mat-header-cell *matHeaderCellDef class="importi"> Messaggio </th>
+            <td mat-cell *matCellDef="let element" class="importi"> {{ element.MSG }} </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</div>
