--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <h5 style="text-align:center">ELABORAZIONI - Riepilogo Stato Procedure</h5>
-<p style="text-align:center">Procedura in corso: Nessun Processo</p>
+<p style="text-align:center">Procedura in corso: {{proceduraInCorso}}</p>
 
 <div style="margin-top:20px; margin-bottom: 100px;">
     <div *ngFor="let dataSource of dataSources">
