--- a/src/app/lancio-procedure/lancio-procedure.component.html
+++ b/src/app/lancio-procedure/lancio-procedure.component.html
@@ -1,5 +1,5 @@
 <h5 style="text-align:center">Lancio procedure</h5>
-<div style="margin-top:20px; margin-bottom: 100px;">
+<div style="margin-top:20px; margin-bottom: 100px;float:left;width:100%">
     <div *ngFor="let proc of procedureSelezionate" style="float:left;width:100%">
         <h5 style="text-align: center;background-color: #f2c979;margin: 0px;padding: 5px 0px;text-transform: uppercase; margin-bottom: 20px;">{{proc.TITOLO_PROCEDURA}}</h5>
         <div *ngFor="let par of proc.PARAMETRI">
