--- a/src/styles.css
+++ b/src/styles.css
@@ -37,7 +37,10 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 .cdk-overlay-connected-position-bounding-box{
-    top:70px !important;
+    top:67px !important;
+}
+.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
+    text-decoration: underline;
 }
 .mat-table {
     box-shadow: 0px 5px 5px -3px rgb(0 0 0 / 7%), 0px 8px 10px 1px rgb(0 0 0 / 5%), 0px 3px 3px 2px rgb(0 0 0 / 3%) !important;
@@ -53,7 +56,9 @@ body {
     padding:0px !important;
 }
 /* top bar */
-
+.mat-menu-item{
+    border-bottom: 1px solid #fff !important;
+}
 .navbar {
     text-transform: uppercase;
     background-color: #f2c979;
@@ -62,7 +67,32 @@ body {
     -moz-box-shadow: 0px 2px 12px -7px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 2px 12px -7px rgba(0, 0, 0, 0.75);
 }
+/* Style the scrollbar background */
+::-webkit-scrollbar {
+    background: white;
+  }
+  
+  /* Style the scrollbar handle */
+  ::-webkit-scrollbar-thumb {
+    background:#f2c979;
+  }
 
+  html {
+    scrollbar-color: #f2c979 white;
+    scrollbar-width: thin;
+  }
+  
+  /* WebKit and Chromiums */
+  ::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+    background-color:#f2c979;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background:#f2c979;
+    border-radius: 0px;
+  }
 .navbar a {
     color: #fff;
     font-weight: 600;
