--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <mat-drawer-container class="example-container" autosize>
-<div style="width: 300px;position: fixed;top: 67px;right: 0px;padding: 10px;background-color: #f2c979;border-radius: 0px 0px 0px 17px;">
+<div style="width: 300px;position: fixed;top: 67px;right: 0px;padding: 10px;z-index:999;background-color: #f2c979;border-radius: 0px 0px 0px 17px;">
   <div style="font-size:12px;margin-bottom:5px;float:left;width:50%"> Data Riferimento:</div> <div style="font-size:12px;margin-bottom:5px;text-align:right;float:left;width:50%"> <strong>{{this.datiComuni?.dataRif}}</strong> </div>
   <div style="font-size:12px;margin-bottom:5px;float:left;width:50%"> Versione:</div> <div style="font-size:12px;margin-bottom:5px;text-align:right;float:left;width:50%"> <strong>{{this.datiComuni?.versione}}</strong></div> 
   <div style="font-size:12px;margin-bottom:5px;float:left;width:50%"> INSTVALS_GEST:</div> <div style="font-size:12px;margin-bottom:5px;text-align:right;float:left;width:50%"> <strong>{{this.datiComuni?.partInstValsGest}}</strong></div> 
   <div style="font-size:12px;margin-bottom:5px;float:left;width:50%"> COUNTERPARTY_MART:</div> <div style="font-size:12px;margin-bottom:5px;text-align:right;float:left;width:50%"> <strong>{{this.datiComuni?.partCounterpartyMart}}</strong></div> 
-</div>
+</div> 
 <nav class="navbar navbar-expand-lg navbar-light" style="position: fixed;width: 100%;top: 0px;z-index: 1;left: 0px;">
   <a class="navbar-brand" href="javascript:void(0);"><img src="../assets/img/logoEstesoRiskPII.jpg"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
